# xpthread

./: CMakeLists.txt  README.md
cmake/: android-toolchain-arm64-v8a.cmake  android-toolchain-armeabi-v7a.cmake  android-toolchain-x86.cmake  android-toolchain-x86_64.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
include/: xpthread.h
src/: xpthread.c
test/: xpthread_tests.c
